add file docker

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ DB_TYPE=mysql
 CLOUDINARY_NAME=dxl3c0nzz
 CLOUDINARY_KEY=625954456912736
 CLOUDINARY_SECRET=OvB8WQAKjkw5-0_-ptWQYGPdT6w
+EMAIL=anhnbk113@gmail.com
+PASSWORD_EMAIL=ktvz euex cgsy mcyo
